--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Snakeoil Release Notes
 ======================
 
 
+* use sane permissions for directories created for tests.
+
 * swallow ENOTDIR from readfiles and readlines if told to ignore
   missing files.
 
