--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ Snakeoil Release Notes
 ======================
 
 
+snakeoil 0.4.5: Nove 30th, 2011
+
+* Fix defaultdict in py2.4 to be compatible with >=py2.5 defaultdict.
+
 * Fix WeakRefFinalizer so that instances that are still strongly referenced
   at the time of sys.exit have their finalizers ran via atexit; specifically,
   run the finalizers only for that pid.
