--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Snakeoil Release Notes
 ======================
 
 
+* add currying.wrap_exception and currying.wrap_exception_complex
+
+
 snakeoil 0.4.5: Nove 30th, 2011
 
 * Fix defaultdict in py2.4 to be compatible with >=py2.5 defaultdict.
