--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,7 @@ Snakeoil Release Notes
 ======================
 
 
-snakeoil trunk:
-
+snakeoil 0.5, August 4th, 2012
 
 * lintplugins were updated to pylint 0.25.1 API; likely works with >=0.21.
 
