--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,11 @@ Snakeoil Release Notes
 
 snakeoil trunk:
 
+
+* If hashlib has a whirlpool implementation, we use it and prefer it
+  over mhash or our fallback implementation; it's faster, drops the
+  GIL, and generally is the bees-knees.
+
 * compatiblility.raise_from no longer looses traceback information in
   >py3k.
 
