Fix doc generation for py3k

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@ Snakeoil Release Notes
 
 snakeoil trunk:
 
+* Fixed doc generation for py3k, including threading appropriate python
+  path/version down through the generation.
+
 snakeoil 0.5.1: September 29th, 2012
 
 * Fix corner case exception in formatter extension, cleanup potential
