add myself to AUTHORS and update message about change details

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,8 @@
 Primary Author(s)
 Brian Harring <ferringb@gmail.com>
 Marien Zwart <marienz@gentoo.org>
+Tim Harder <radhermit@gentoo.org>
 
-bzr annotate/log if you're curious about the gory details of who did what
+git log if you're curious about the gory details of who did what
 
 In addition, snakeoil.fix_copy was written by the bzrlib folks, (C) Canonical 2005,2006
