update URLs to github

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ WHAT IS SNAKEOIL?
 
 WHO TO CONTACT IF I FIND A BUG?
 
-  Please submit a bug/ticket via https://code.google.com/p/snakeoil/ .
+  Please submit a bug/ticket via https://github.com/pkgcore/snakeoil/issues .
 
 
 TESTS?
