update my email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Primary Author(s)
 Brian Harring <ferringb@gmail.com>
 Marien Zwart <marienz@gentoo.org>
-Tim Harder <radhermit@gentoo.org>
+Tim Harder <radhermit@gmail.com>
 
 git log if you're curious about the gory details of who did what
